[package]
name = "rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.7.0"
actix-web = "4.4.1"
chrono = "0.4.31"
diesel = {version = "2.1.4", features = ["postgres", "chrono"]}
dotenvy = "0.15.7"
serde = {version = "1.0.195", features = ["derive"]}
