[package]
name = "rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.7.0"
actix-web = "4.4.1"
chrono = {version = "0.4.31", features = ["serde"]}
diesel = {version = "2.1.4", features = ["postgres", "chrono", "r2d2"]}
dotenvy = "0.15.7"
env_logger = "0.10.1"
serde = {version = "1.0.195", features = ["derive"]}
